<resources>
    <string name="app_name">carowner</string>
    <string name="app_name_list">carowner list</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="random">Random</string>
    <string name="daegu">대구</string>
    <string name="busan">부산</string>
    <string name="recycler">RecyclerView</string>
    <string name="tmap">tmap</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="line_chart">Line Chart</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="title_activity_register">RegisterActivity</string>
</resources>

