<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_random"
            android:icon="@android:drawable/ic_dialog_alert"
            android:title="@string/random"
            android:checked="true" />
        <item
            android:id="@+id/nav_daegu"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/daegu" />
        <item
            android:id="@+id/nav_busan"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/busan" />
        <item
            android:id="@+id/nav_recyceler"
            android:icon="@android:drawable/ic_btn_speak_now"
            android:title="@string/recycler"/>
        <item
            android:id="@+id/nav_tmap"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/tmap" />
        <item
            android:id="@+id/nav_line_chart"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/line_chart" />
        <item
            android:id="@+id/nav_pie_chart"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/pie_chart" />
    </group>

</menu>